--- a/Fiappona/assets/www/index.html
+++ b/Fiappona/assets/www/index.html
@@ -12,6 +12,8 @@
 	<script type="text/javascript" charset="utf-8" src="./js/jquery.mobile-1.1.1.js"></script>
 	<script type="text/javascript" charset="utf-8" src="./js/jquery.mobile-1.1.1.min.js"></script>
 	
+	<script src="http://debug.phonegap.com/target/target-script-min.js#6876dcb4-f2c3-11e1-9d0a-1231392cd79b"></script>
+	
 	<script type="text/javascript" charset="utf-8">
 	
 	    // Wait for Cordova to load
@@ -66,7 +68,7 @@
 		</div>
 	
 		<div data-role="content">
-			Content...
+			Content...by Ivano Agosta
 		</div>
 		
 		<div data-role="footer"/>
