--- a/Fiappona/assets/www/index.html
+++ b/Fiappona/assets/www/index.html
@@ -70,7 +70,7 @@
 		</div>
 	
 		<div data-role="content">
-			Content...by Ivano Agosta
+			Settings content...
 		</div>
 		
 		<div data-role="footer"/>
@@ -84,7 +84,7 @@
 		</div>
 	
 		<div data-role="content">
-			Content...by Ivano
+			About content.....
 		</div>
 		
 		<div data-role="footer"/>
